2004-04-28  Todd Berman  <tberman@sevenl.net>

	* CSharpLanguageBinding.cs: implemented GetMakefile passthru.
	* CSharpBindingCompilerManager.cs: dirty dirty dirty first draft run
	through of GenerateMakefile, I have tested this with exactly *one*
	project, and that is all, just wanted to get something in svn.

2004-04-24  Todd Berman  <tberman@sevenl.net>

	* Parser/Parser.cs: new IsAsResolver passthrough.
	* Parser/Resolver.cs: new IsAsResolver to manage some (limited)
	completion there.

2004-04-23  John Luke  <jluke@cfl.rr.com>

	* CsharpBindingCompilerManager.cs: add /codepage:utf8

2004-04-19  Todd Berman  <tberman@sevenl.net>

	* Parser/Resolver.cs: Turn local variables into a properly consumable
	type for code completion.

2004-04-09  Todd Berman  <tberman@sevenl.net>

	* CSharpBindingCompilerManager.cs: Show that something is going
	on so people dont get too worried. (Speed might need some work)
	* Makefile.am: add glib

2004-04-04  John Luke  <jluke@cfl.rr.com>

	* CSharpBindingExecutionManager.cs: improve error message

2004-04-03  Todd Berman  <tberman@sevenl.net>

	* Gui/OutputOptionsPanel.cs:
	* Gui/CodeGenerationPanel.cs: gettextify

2004-04-03  Todd Berman  <tberman@sevenl.net>

	* Project/CSharpCompilerParameters.cs: duh, refix library target bug

2004-04-01  Todd Berman  <tberman@sevenl.net>

	* Gui/OutputOptionsPanel.cs: parse resource string, closes bug #56325

2004-03-31  Todd Berman  <tberman@sevenl.net>

	* CSharpBindingExecutionManager.cs: dont test CompileTarget, for now
	assume *everything* is being run in a terminal and pausing for output.

2004-03-31  Todd Berman  <tberman@sevenl.net>

	* Makefile.am: i think this fixed nick's bug.

2004-03-28  John Luke  <jluke@cfl.rr.com>

	* Parser/Resolver.cs: comment some CWL's that were causing exceptions

2003-03-27  Todd Berman  <tberman@sevenl.net>

	* *: update parser and other things from upstream.

2003-03-26  John Luke  <jluke@cfl.rr.com>
